objects/Listing__c.object
<CustomObject>
    <fields>
        <fullName>AMI_Percentage__c</fullName>
        <label>AMI Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accepting_Online_Applications__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field to determine if a Listing is currently accepting applications online.</description>
        <label>Accepting Online Applications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accepting_applications_at_leasing_agent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Accepting applications at leasing agent address</inlineHelpText>
        <label>Accepting applications at leasing agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accepting_applications_by_PO_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Accepting applications by PO Box</inlineHelpText>
        <label>Accepting applications by PO Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accessibility__c</fullName>
        <label>Accessibility</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Listings</relationshipLabel>
        <relationshipName>Listings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amenities__c</fullName>
        <label>Amenities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApplicablePreferences__c</fullName>
        <description>We are strictly enforcing this.  Based off this value the API chooses which buckets to return in the preference buckets</description>
        <label>ApplicablePreferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LiveWork</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>DTHP</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_City__c</fullName>
        <label>Application City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Due_Date__c</fullName>
        <description>Due Date for Applications for the lottery for this listing.</description>
        <inlineHelpText>Due Date for Applications for the lottery for this listing.</inlineHelpText>
        <label>Application Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Organization__c</fullName>
        <label>Application Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Phone__c</fullName>
        <label>Application Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Application_Postal_Code__c</fullName>
        <label>Application Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_State__c</fullName>
        <defaultValue>&quot;CA&quot;</defaultValue>
        <label>Application State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Street_Address__c</fullName>
        <label>Application Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blank_paper_application_can_be_picked_up__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Blank paper application can be picked up at leasing agent</inlineHelpText>
        <label>Blank paper application can be picked up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building_City__c</fullName>
        <formula>Building__r.Building_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Listing_Category__c</fullName>
        <description>What is the category - New Rental/Rerental?</description>
        <inlineHelpText>What is the category - New Rental/Rerental?</inlineHelpText>
        <label>Building Listing Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Rental</fullName>
                </value>
                <value>
                    <fullName>Rerental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Name__c</fullName>
        <formula>Building__r.Property_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Selection_Criteria__c</fullName>
        <label>Building Selection Criteria</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Building_State__c</fullName>
        <formula>Building__r.Building_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Street_Address__c</fullName>
        <formula>Building__r.Building_Street_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_URL__c</fullName>
        <formula>Building__r.Photo_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Zip_Code__c</fullName>
        <formula>Building__r.Building_Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Listings</relationshipLabel>
        <relationshipName>Listings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COPUnitsAvailable__c</fullName>
        <description>Total units available for COP preference</description>
        <label>COP Units Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COP_App_Total__c</fullName>
        <description>Total applications with COP preference</description>
        <label>COP App Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_Age_Threshold__c</fullName>
        <description>Field will ultimately be hidden and come from either property or unit. Refers to the threshold below which children don&apos;t count towards occupancy.</description>
        <inlineHelpText>Field will ultimately be hidden and come from either property or unit. Refers to the threshold below which children don&apos;t count towards occupancy.</inlineHelpText>
        <label>Child Age Threshold</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Confirmed_Duplicate_Applications__c</fullName>
        <label>Confirmed Duplicate Applications</label>
        <summaryFilterItems>
            <field>Application__c.of_Reviewed_Flagged_Applications__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Application__c.Listing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Costs_Not_Included__c</fullName>
        <description>Detailed Information about other costs not included with rent. Converted to text field from currency.</description>
        <inlineHelpText>Detailed Information about other costs not included with rent.</inlineHelpText>
        <label>Costs Not Included</label>
        <length>1550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Rating__c</fullName>
        <label>Credit History</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criminal_History__c</fullName>
        <label>Criminal Background</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DTHPUnitsAvailable__c</fullName>
        <description>Total units available for DTHP preference</description>
        <label>DTHP Units Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTHP_App_Total__c</fullName>
        <description>Total applications with DTHP preference</description>
        <label>DTHP App Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deposit_Max__c</fullName>
        <label>Deposit Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Min__c</fullName>
        <label>Deposit Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Listing</description>
        <inlineHelpText>Description of the Listing</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <description>Name of the Developer for the Building.</description>
        <formula>Building__r.Developer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the Developer for the Building.</inlineHelpText>
        <label>Developer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <description>UNUSED hidden field which we use for service level translation</description>
        <label>Does Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Download_URL_Cantonese__c</fullName>
        <inlineHelpText>Download URL Cantonese</inlineHelpText>
        <label>Download URL Cantonese</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Download_URL_Spanish__c</fullName>
        <inlineHelpText>Download URL Spanish</inlineHelpText>
        <label>Download URL Spanish</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Download_URL_Tagalog__c</fullName>
        <inlineHelpText>Download URL Tagalog</inlineHelpText>
        <label>Download URL Tagalog</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Download_URL__c</fullName>
        <inlineHelpText>Download URL English</inlineHelpText>
        <label>Download URL English</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Draw_ID__c</fullName>
        <label>Draw ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eviction_History__c</fullName>
        <label>Rental History</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Lease_Date_for_BMR_Units__c</fullName>
        <description>Date on which you expect BMR units to be leased</description>
        <inlineHelpText>Date on which you expect BMR units to be leased</inlineHelpText>
        <label>Expected Lease Date for BMR Units</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Application Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flagged_Applications__c</fullName>
        <description>The number of applications that have been flagged by the application flagging process (dupe rules).</description>
        <label>Flagged Applications</label>
        <summaryFilterItems>
            <field>Application__c.Number_of_Flags__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Application__c.Listing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>General_App_Total__c</fullName>
        <label>General App Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Lottery__c</fullName>
        <description>The number of applications that will be included in the lottery.</description>
        <formula>Submitted_Applications__c -  Removed_from_Lottery__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applications In Lottery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leasing_Agent_City__c</fullName>
        <formula>Building__r.Leasing_Agent__r.MailingCity</formula>
        <label>Leasing Agent City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Agent_Email__c</fullName>
        <formula>Building__r.Leasing_Agent__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leasing Agent Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Agent_Name__c</fullName>
        <formula>Building__r.Leasing_Agent__r.FirstName  &amp; &quot; &quot; &amp; Building__r.Leasing_Agent__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leasing Agent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Agent_Phone__c</fullName>
        <formula>Building__r.Leasing_Agent__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leasing Agent Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Agent_State__c</fullName>
        <formula>Building__r.Leasing_Agent__r.MailingState</formula>
        <label>Leasing Agent State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Agent_Street__c</fullName>
        <formula>Building__r.Leasing_Agent__r.MailingStreet</formula>
        <label>Leasing Agent Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Agent_Title__c</fullName>
        <formula>Building__r.Leasing_Agent__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leasing Agent Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Agent_Zip__c</fullName>
        <formula>Building__r.Leasing_Agent__r.MailingPostalCode</formula>
        <label>Leasing Agent Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Disclaimers__c</fullName>
        <label>Important Program Rules</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Listing_Other_Notes__c</fullName>
        <inlineHelpText>Listing Other Notes</inlineHelpText>
        <label>Listing Other Notes</label>
        <length>650</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LiveWorkUnitsAvailable__c</fullName>
        <description>Total units available for Live/Work preference</description>
        <label>Live/ Work Units Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_Work_App_Total__c</fullName>
        <description>Total applications with Live/Work preference</description>
        <label>Live Work App Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LotteryResultsURL__c</fullName>
        <defaultValue>&quot;http://sfmohcd.org/node/1112&quot;</defaultValue>
        <label>Lottery Results PDF URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lottery_City__c</fullName>
        <defaultValue>&quot;San Francisco&quot;</defaultValue>
        <label>Lottery City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery_Date__c</fullName>
        <label>Lottery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lottery_End_Time__c</fullName>
        <label>Lottery End Time</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery_End__c</fullName>
        <description>End of the Lottery - DateTime</description>
        <inlineHelpText>End of the Lottery - DateTime</inlineHelpText>
        <label>Lottery End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lottery_Preferences__c</fullName>
        <label>Lottery Preferences</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certificate of Preference</fullName>
                </value>
                <value>
                    <fullName>Ellis Act</fullName>
                </value>
                <value>
                    <fullName>Live\Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lottery_Results_Date__c</fullName>
        <description>Date Lottery Results are posted</description>
        <inlineHelpText>Date Lottery Results are posted</inlineHelpText>
        <label>Lottery Results Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lottery_Results__c</fullName>
        <description>Indicates there is at least one lottery winner</description>
        <formula>IF(ISPICKVAL(Lottery_Status__c, &apos;Lottery Complete&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates there is at least one lottery winner</inlineHelpText>
        <label>Lottery Results?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lottery_Start_Time__c</fullName>
        <label>Lottery Start Time</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery_Status__c</fullName>
        <label>Lottery Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Run</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Lottery Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lottery_Street_Address__c</fullName>
        <label>Lottery Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery_Summary__c</fullName>
        <description>Summary of the Lottery Results.</description>
        <inlineHelpText>Summary of the Lottery Results.</inlineHelpText>
        <label>Lottery Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery_URL__c</fullName>
        <label>Lottery URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lottery_Venue__c</fullName>
        <label>Lottery Venue</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery_Winners__c</fullName>
        <description>Rollup sumary with Count of people who have been selected as winning lottery and therefore, the status of their lottery member = Winner.</description>
        <inlineHelpText>Rollup sumary with Count of people who have been selected as winning lottery and therefore, the status of their lottery member = Winner.</inlineHelpText>
        <label>Lottery Winners</label>
        <summaryFilterItems>
            <field>Lottery_Member__c.Status__c</field>
            <operation>equals</operation>
            <value>Winner</value>
        </summaryFilterItems>
        <summaryForeignKey>Lottery_Member__c.Listing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Marketing_Start_Date__c</fullName>
        <inlineHelpText>Marketing Start Date</inlineHelpText>
        <label>Marketing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_BR__c</fullName>
        <label>Max BR</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Income__c</fullName>
        <label>Max Income</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Occupancy__c</fullName>
        <description>Field will ultimately be hidden from page layout and is based on max occupancy of max from all units in a given listing. Field is used to hold the maximum occupancy.</description>
        <inlineHelpText>Field will ultimately be hidden from page layout and is based on max occupancy of max from all units in a given listing. Field is used to hold the maximum occupancy.</inlineHelpText>
        <label>Max Occupancy</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_waitlist_size__c</fullName>
        <label>Maximum waitlist size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_BR__c</fullName>
        <label>Min BR</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Income__c</fullName>
        <label>Min Income</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Occupancy__c</fullName>
        <description>Field will ultimately be hidden from page layout and is automatically determined based on number of Bedrooms. Field is used to hold the minimum occupancy based on bedrooms.</description>
        <inlineHelpText>Field will ultimately be hidden from page layout and is automatically determined based on number of Bedrooms. Field is used to hold the minimum occupancy based on bedrooms.</inlineHelpText>
        <label>Min Occupancy</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NeighborHoodPreferenceUrl__c</fullName>
        <description>Temporary location store for uploaded PDF that captures the neighborhood preference list</description>
        <label>Neighborhood Preference PDF URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NeighborhoodUnitsAvailable__c</fullName>
        <description>Total units available for Neighborhood preference</description>
        <label>Neighborhood Units Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Neighborhood_App_Total__c</fullName>
        <description>Total applications with Neighborhood preference</description>
        <label>Neighborhood App Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Neighborhood__c</fullName>
        <description>Neighborhood for the listing.</description>
        <formula>TEXT( Building__r.Neighborhood__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Neighborhood for the listing. Pulled automatically from property</inlineHelpText>
        <label>Neighborhood</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Applications__c</fullName>
        <description>Displays how many Applications have been submitted for this particular listing.</description>
        <inlineHelpText>Displays how many Applications have been submitted for this particular listing.</inlineHelpText>
        <label>Number of Applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Communication_priority_units__c</fullName>
        <inlineHelpText>Number of Communication priority units</inlineHelpText>
        <label>Number of Communication priority units</label>
        <summaryFilterItems>
            <field>Listing_Unit__c.Priority_Grouping__c</field>
            <operation>equals</operation>
            <value>Communication</value>
        </summaryFilterItems>
        <summaryForeignKey>Listing_Unit__c.Listing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Mobility_priority_units__c</fullName>
        <inlineHelpText>Number of Mobility priority units</inlineHelpText>
        <label>Number of Mobility priority units</label>
        <summaryFilterItems>
            <field>Listing_Unit__c.Priority_Grouping__c</field>
            <operation>equals</operation>
            <value>Mobility</value>
        </summaryFilterItems>
        <summaryForeignKey>Listing_Unit__c.Listing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Other_priority_units__c</fullName>
        <label>Number of Other priority units</label>
        <summaryFilterItems>
            <field>Listing_Unit__c.Priority_Grouping__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </summaryFilterItems>
        <summaryForeignKey>Listing_Unit__c.Listing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_people_currently_on_waitlist__c</fullName>
        <label>Number of people currently on waitlist</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Closed__c</fullName>
        <label>Office Closed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office_Hours__c</fullName>
        <label>Office Hours</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Office_Open__c</fullName>
        <label>Office Open</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization_URL__c</fullName>
        <formula>Building__r.Development__r.Property_Manager__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pet_Policy__c</fullName>
        <label>Pet Policy</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Preference_Detail__c</fullName>
        <label>Preference Detail</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <inlineHelpText>Differentiates between Listings for rentals and ownerships</inlineHelpText>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IH-RENTAL</fullName>
                </value>
                <value>
                    <fullName>IH-OWN</fullName>
                </value>
                <value>
                    <fullName>OCII-OWN</fullName>
                </value>
                <value>
                    <fullName>OCII-RENTAL</fullName>
                </value>
                <value>
                    <fullName>MF-RENTAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>Building__r.Project_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MOHCD Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Listing_Category__c</fullName>
        <description>What is the category - New Rental/Rerental?</description>
        <inlineHelpText>What is the category - New Rental/Rerental?</inlineHelpText>
        <label>Property Listing Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Rental</fullName>
                </value>
                <value>
                    <fullName>Rerental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Selection_Criteria__c</fullName>
        <label>Property Selection Criteria</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Random_org_Public_Draw_URL__c</fullName>
        <formula>HYPERLINK(&quot;https://www.random.org/draws/details/?draw=&quot;+Draw_ID__c, &quot;Random.org Draw #&quot;+Draw_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Random.org Public Draw URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removed_from_Lottery__c</fullName>
        <description>The number of applications where the status is &quot;Removed&quot; as being a confirmed duplicate.</description>
        <label>Removed from Lottery</label>
        <summaryFilterItems>
            <field>Application__c.Status__c</field>
            <operation>equals</operation>
            <value>Removed</value>
        </summaryFilterItems>
        <summaryForeignKey>Application__c.Listing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rental_Assistance__c</fullName>
        <description>To be further built but placeholder for rental assistance</description>
        <inlineHelpText>To be further built but placeholder for rental assistance</inlineHelpText>
        <label>Rental Assistance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subsidies and Vouchers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_Documents__c</fullName>
        <label>Required Documents</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reserved_Community_Requirement__c</fullName>
        <formula>TEXT(Building__r.Reserved_Community_Requirement__c)</formula>
        <label>Reserved Community Requirement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reserved_community_maximum_age__c</fullName>
        <formula>Building__r.Reserved_community_maximum_age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reserved community maximum age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>